# mega-mcp-server

./: CHANGELOG.md  Cargo.toml  README.md  package-lock.json  package.json
src/: index.ts  main.rs
