[package]
name = "mega_mcp_server"
version = "0.1.0"
edition = "2024"
description = "MCP server for MEGA cloud storage -- 20 tools via MEGAcmd CLI"
license = "MIT"
authors = ["Purple Squirrel Media LLC"]

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
