[package]
name = "mega-mcp-server"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Purple Squirrel Media LLC"]

[[bin]]
name = "mega-mcp-server"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
